# emoji-remover

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install-pre-commit.sh
.github/workflows/: ci.yml  release.yml
data/: ATTRIBUTION.md
src/: main.rs
