[package]
name = "emoji-remover"
version = "0.1.0"
edition = "2021"
authors = ["James Pine <contact@jamiepine.com>"]
description = "A fast command-line tool to remove emojis from source code files"
documentation = "https://github.com/jamiepine/emoji-remover"
homepage = "https://github.com/jamiepine/emoji-remover"
repository = "https://github.com/jamiepine/emoji-remover"
readme = "README.md"
keywords = ["emoji", "unicode", "cli", "tool", "clean"]
categories = ["command-line-utilities", "text-processing", "development-tools"]
license = "MIT"

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
rayon = "1"
ignore = "0.4"

[build-dependencies]
serde_json = "1"
